--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.12",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
